// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Course overview survey item test Grid item closed 1`] = `
<DocumentFragment>
  <div
    class="lesson-overview-padded-container lesson-overview-base-assessment-grid-item"
  >
    <div
      class="container status-closed"
    >
      <div
        class="nti-link-to-path"
        to="#"
      >
        <div
          class="target"
        >
          <div
            class="icon-container"
          >
            <div
              class="icon"
            >
              <div
                class="icon"
              >
                <div
                  class="lesson-overview-survey-icon"
                />
              </div>
            </div>
          </div>
          <div
            class="info-container"
          >
            <div
              class="title-container"
            >
              <span
                class="title"
              >
                Survey item 1
              </span>
            </div>
            <div
              class="labels-container"
            >
              <ul
                class="nti-separated-inline-list lesson-overview-survey-label"
              >
                <li>
                  <span
                    class="question-count"
                  >
                    0 Questions
                  </span>
                </li>
                <li>
                  <span
                    class="submissions"
                  >
                    0 Submissions
                  </span>
                </li>
                <li>
                  <span
                    class="due"
                  >
                    Available Now
                  </span>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="button-container"
          >
            <span
              class="nti-button button constructive medium pv-md ph-xl roundedSmall"
              tabindex="0"
            >
              <div
                data-button-label="true"
              >
                Closed
              </div>
            </span>
          </div>
        </div>
      </div>
      <div
        class="editor-container"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Course overview survey item test Grid item submitted 1`] = `
<DocumentFragment>
  <div
    class="lesson-overview-padded-container lesson-overview-base-assessment-grid-item"
  >
    <div
      class="container status-closed"
    >
      <div
        class="nti-link-to-path"
        to="#"
      >
        <div
          class="target"
        >
          <div
            class="icon-container"
          >
            <div
              class="icon"
            >
              <div
                class="icon"
              >
                <div
                  class="lesson-overview-survey-icon"
                />
              </div>
            </div>
          </div>
          <div
            class="info-container"
          >
            <div
              class="title-container"
            >
              <span
                class="title"
              >
                Survey item 1
              </span>
            </div>
            <div
              class="labels-container"
            >
              <ul
                class="nti-separated-inline-list lesson-overview-survey-label"
              >
                <li>
                  <span
                    class="question-count"
                  >
                    0 Questions
                  </span>
                </li>
                <li>
                  <span
                    class="submissions"
                  >
                    0 Submissions
                  </span>
                </li>
                <li>
                  <span
                    class="due"
                  >
                    Available Now
                  </span>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="button-container"
          >
            <span
              class="nti-button button constructive medium pv-md ph-xl roundedSmall"
              tabindex="0"
            >
              <div
                data-button-label="true"
              >
                Review
              </div>
            </span>
          </div>
        </div>
      </div>
      <div
        class="editor-container"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Course overview survey item test Grid item with 3 questions, 4 submissions 1`] = `
<DocumentFragment>
  <div
    class="lesson-overview-padded-container lesson-overview-base-assessment-grid-item"
  >
    <div
      class="container status-closed"
    >
      <div
        class="nti-link-to-path"
        to="#"
      >
        <div
          class="target"
        >
          <div
            class="icon-container"
          >
            <div
              class="icon"
            >
              <div
                class="icon"
              >
                <div
                  class="lesson-overview-survey-icon"
                />
              </div>
            </div>
          </div>
          <div
            class="info-container"
          >
            <div
              class="title-container"
            >
              <span
                class="title"
              >
                Survey item 1
              </span>
            </div>
            <div
              class="labels-container"
            >
              <ul
                class="nti-separated-inline-list lesson-overview-survey-label"
              >
                <li>
                  <span
                    class="question-count"
                  >
                    3 Questions
                  </span>
                </li>
                <li>
                  <span
                    class="submissions"
                  >
                    4 Submissions
                  </span>
                </li>
                <li>
                  <span
                    class="due"
                  >
                    Available Now
                  </span>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="button-container"
          >
            <span
              class="nti-button button constructive medium pv-md ph-xl roundedSmall"
              tabindex="0"
            >
              <div
                data-button-label="true"
              >
                Take
              </div>
            </span>
          </div>
        </div>
      </div>
      <div
        class="editor-container"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Course overview survey item test Grid item with 5 comments, completable, required, no questions or submissions 1`] = `
<DocumentFragment>
  <div
    class="lesson-overview-padded-container lesson-overview-base-assessment-grid-item"
  >
    <div
      class="container status-closed"
    >
      <div
        class="nti-link-to-path"
        to="#"
      >
        <div
          class="target"
        >
          <div
            class="icon-container"
          >
            <div
              class="icon"
            >
              <div
                class="icon"
              >
                <div
                  class="lesson-overview-survey-icon"
                />
              </div>
            </div>
          </div>
          <div
            class="info-container"
          >
            <div
              class="title-container"
            >
              <span
                class="title"
              >
                Survey item 1
              </span>
            </div>
            <div
              class="labels-container"
            >
              <ul
                class="nti-separated-inline-list lesson-overview-survey-label"
              >
                <li>
                  <div
                    class="lesson-overview-item-required-label"
                  >
                    Required
                  </div>
                </li>
                <li>
                  <span
                    class="question-count"
                  >
                    0 Questions
                  </span>
                </li>
                <li>
                  <span
                    class="submissions"
                  >
                    0 Submissions
                  </span>
                </li>
                <li>
                  <span
                    class="due"
                  >
                    Available Now
                  </span>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="button-container"
          >
            <span
              class="nti-button button constructive medium pv-md ph-xl roundedSmall"
              tabindex="0"
            >
              <div
                data-button-label="true"
              >
                Take
              </div>
            </span>
          </div>
        </div>
      </div>
      <div
        class="editor-container"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Course overview survey item test Grid item with 5 comments, completable, requirement editable 1`] = `
<DocumentFragment>
  <div
    class="lesson-overview-padded-container lesson-overview-base-assessment-grid-item"
  >
    <div
      class="container status-closed"
    >
      <div
        class="nti-link-to-path"
        to="#"
      >
        <div
          class="target"
        >
          <div
            class="icon-container"
          >
            <div
              class="icon"
            >
              <div
                class="icon"
              >
                <div
                  class="lesson-overview-survey-icon"
                />
              </div>
            </div>
          </div>
          <div
            class="info-container"
          >
            <div
              class="title-container"
            >
              <span
                class="title"
              >
                Survey item 1
              </span>
            </div>
            <div
              class="labels-container"
            >
              <ul
                class="nti-separated-inline-list lesson-overview-survey-label"
              >
                <li>
                  <div
                    aria-haspopup="dialog"
                    class="flyout-trigger require-control-value require-control flyout-closed"
                    tabindex="0"
                  >
                    <span>
                      Required
                    </span>
                    <i
                      class="icon-chevron-down"
                    />
                  </div>
                </li>
                <li>
                  <span
                    class="question-count"
                  >
                    0 Questions
                  </span>
                </li>
                <li>
                  <span
                    class="submissions"
                  >
                    0 Submissions
                  </span>
                </li>
                <li>
                  <span
                    class="due"
                  >
                    Available Now
                  </span>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="button-container"
          >
            <span
              class="nti-button button constructive medium pv-md ph-xl roundedSmall"
              tabindex="0"
            >
              <div
                data-button-label="true"
              >
                Take
              </div>
            </span>
          </div>
        </div>
      </div>
      <div
        class="editor-container"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Course overview survey item test List item closed 1`] = `
<DocumentFragment>
  <div
    class="lesson-overview-padded-container lesson-overview-base-list-item-container"
  >
    <div
      class="lesson-overview-base-list-item-table-row"
    >
      <div
        class="lesson-overview-base-list-item-table-info-cell"
      >
        <div
          class="nti-link-to-path lesson-overview-base-list-item-link"
          to="#"
        >
          <div
            class="lesson-overview-base-list-item lesson-overview-survey-list-item"
          >
            <div
              class="icon-container"
            >
              <div
                class="icon"
              >
                <div
                  class="lesson-overview-survey-icon"
                />
              </div>
            </div>
            <div
              class="right"
            >
              <div
                class="title plain"
              >
                Survey item 1
              </div>
              <div
                class="labels"
              >
                <ul
                  class="nti-separated-inline-list lesson-overview-survey-label"
                >
                  <li>
                    <span
                      class="question-count"
                    >
                      0 Questions
                    </span>
                  </li>
                  <li>
                    <span
                      class="submissions"
                    >
                      0 Submissions
                    </span>
                  </li>
                  <li>
                    <span
                      class="due"
                    >
                      Available Now
                    </span>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Course overview survey item test List item submitted 1`] = `
<DocumentFragment>
  <div
    class="lesson-overview-padded-container lesson-overview-base-list-item-container"
  >
    <div
      class="lesson-overview-base-list-item-table-row"
    >
      <div
        class="lesson-overview-base-list-item-table-info-cell"
      >
        <div
          class="nti-link-to-path lesson-overview-base-list-item-link"
          to="#"
        >
          <div
            class="lesson-overview-base-list-item lesson-overview-survey-list-item"
          >
            <div
              class="icon-container"
            >
              <div
                class="icon"
              >
                <div
                  class="lesson-overview-survey-icon"
                />
              </div>
            </div>
            <div
              class="right"
            >
              <div
                class="title plain"
              >
                Survey item 1
              </div>
              <div
                class="labels"
              >
                <ul
                  class="nti-separated-inline-list lesson-overview-survey-label"
                >
                  <li>
                    <span
                      class="question-count"
                    >
                      0 Questions
                    </span>
                  </li>
                  <li>
                    <span
                      class="submissions"
                    >
                      0 Submissions
                    </span>
                  </li>
                  <li>
                    <span
                      class="due"
                    >
                      Available Now
                    </span>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Course overview survey item test List item with 3 questions, 4 submissions 1`] = `
<DocumentFragment>
  <div
    class="lesson-overview-padded-container lesson-overview-base-list-item-container"
  >
    <div
      class="lesson-overview-base-list-item-table-row"
    >
      <div
        class="lesson-overview-base-list-item-table-info-cell"
      >
        <div
          class="nti-link-to-path lesson-overview-base-list-item-link"
          to="#"
        >
          <div
            class="lesson-overview-base-list-item lesson-overview-survey-list-item"
          >
            <div
              class="icon-container"
            >
              <div
                class="icon"
              >
                <div
                  class="lesson-overview-survey-icon"
                />
              </div>
            </div>
            <div
              class="right"
            >
              <div
                class="title plain"
              >
                Survey item 1
              </div>
              <div
                class="labels"
              >
                <ul
                  class="nti-separated-inline-list lesson-overview-survey-label"
                >
                  <li>
                    <span
                      class="question-count"
                    >
                      3 Questions
                    </span>
                  </li>
                  <li>
                    <span
                      class="submissions"
                    >
                      4 Submissions
                    </span>
                  </li>
                  <li>
                    <span
                      class="due"
                    >
                      Available Now
                    </span>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Course overview survey item test List item with 5 comments, completable, required, no questions or submissions 1`] = `
<DocumentFragment>
  <div
    class="lesson-overview-padded-container lesson-overview-base-list-item-container"
  >
    <div
      class="lesson-overview-base-list-item-table-row"
    >
      <div
        class="lesson-overview-base-list-item-table-info-cell"
      >
        <div
          class="nti-link-to-path lesson-overview-base-list-item-link"
          to="#"
        >
          <div
            class="lesson-overview-base-list-item lesson-overview-survey-list-item"
          >
            <div
              class="icon-container"
            >
              <div
                class="icon"
              >
                <div
                  class="lesson-overview-survey-icon"
                />
              </div>
            </div>
            <div
              class="right"
            >
              <div
                class="title plain"
              >
                Survey item 1
              </div>
              <div
                class="labels"
              >
                <ul
                  class="nti-separated-inline-list lesson-overview-survey-label"
                >
                  <li>
                    <div
                      class="lesson-overview-item-required-label"
                    >
                      Required
                    </div>
                  </li>
                  <li>
                    <span
                      class="question-count"
                    >
                      0 Questions
                    </span>
                  </li>
                  <li>
                    <span
                      class="submissions"
                    >
                      0 Submissions
                    </span>
                  </li>
                  <li>
                    <span
                      class="due"
                    >
                      Available Now
                    </span>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Course overview survey item test List item with 5 comments, completable, requirement editable 1`] = `
<DocumentFragment>
  <div
    class="lesson-overview-padded-container lesson-overview-base-list-item-container"
  >
    <div
      class="lesson-overview-base-list-item-table-row"
    >
      <div
        class="lesson-overview-base-list-item-table-info-cell"
      >
        <div
          class="nti-link-to-path lesson-overview-base-list-item-link"
          to="#"
        >
          <div
            class="lesson-overview-base-list-item lesson-overview-survey-list-item"
          >
            <div
              class="icon-container"
            >
              <div
                class="icon"
              >
                <div
                  class="lesson-overview-survey-icon"
                />
              </div>
            </div>
            <div
              class="right"
            >
              <div
                class="title plain"
              >
                Survey item 1
              </div>
              <div
                class="labels"
              >
                <ul
                  class="nti-separated-inline-list lesson-overview-survey-label"
                >
                  <li>
                    <div
                      class="lesson-overview-item-required-label"
                    >
                      Required
                    </div>
                  </li>
                  <li>
                    <span
                      class="question-count"
                    >
                      0 Questions
                    </span>
                  </li>
                  <li>
                    <span
                      class="submissions"
                    >
                      0 Submissions
                    </span>
                  </li>
                  <li>
                    <span
                      class="due"
                    >
                      Available Now
                    </span>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
